2006-02-02  Jonathan Pryor  <jonpryor@vt.edu>

	* www/images/heads/jonpryor.png: Use a transparent background.

2006-02-02  Jonathan Pryor  <jonpryor@vt.edu>

	* workers/bloggers.xml: Add my feed.
	* www/images/heads/jonpryor.png: Add my hackergotchi.

2006-01-18  Alexandre Gomes  <alexmipego@gmail.com>

	* worker/bloggers.xml: Updated my feed url.

2006-01-18  Ankit Jain  <jankit@novell.com>

	* worker/bloggers.xml: Added my feed.

2005-12-09 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* worker/monologue-worker.cs: fixes odd problem that caused the
	hashtable mapping from id to data not to be created.
	* worker/RSS.NET.dll: updated.

2005-11-25  Jonathan Chambers  <jonathan.chambers@ansys.com>
	* worker/bloggers.xml: Added my feed

2005-11-15  Rafael Teixeira  <rafaelteixeirabr@hotmail.com>
	* worker/bloggers.xml, www/images/heads/monoman.png:
		Add my head pic with a kitten

2005-11-15  Massimiliano Mantione  <massi@ximian.com>

	* worker/bloggers.xml
	  www/images/heads/massi-hackergotchi.png:
		Add my hackergotchi

2005-11-08  Aaron Bockover  <aaron@aaronbock.net>

	* worker/bloggers.xml: Updated my feed... again

2005-11-07  Aaron Bockover  <aaron@aaronbock.net>

	* worker/bloggers.xml: Updated MDK's feed

2005-11-05  Alexandre Gomes  <alexmipego@gmail.com>
	* worker/bloggers.xml: Added my feed

2005-10-28  Jb Evain  <jbevain@gmail.com>

	* worker/bloggers.xml
	  www/images/heads/jbevain.png:
		Add my hackergotchi

2005-10-27  Aaron Bockover  <aaron@aaronbock.net>

	* worker/bloggers.xml: updated my feed URI

2005-10-22  Jb Evain  <jbevain@gmail.com>

	* worker/bloggers.xml: update my entry.

2005-09-26  Eric Butler <eric@extremeboredom.net>
	
	* www/images/heads/jhill.png: 
		- New hackergotchi
	
	* worker/bloggers.xml:
		- Add above hackergotchi

	* www/css/planet.css: 
		- Add scrollbar to post-contents if needed
	
	* www/js/prettyprint.js: 
		- Work with both <pre> and <xmp>
		- set class to "formattedcode"
		
	* www/css/monologue.css: