@@ -1,3 +1,8 @@
+2006-02-02 Gonzalo Paniagua Javier <gonzalo@ximian.com>
+
+	* worker/monologue-worker.cs: handle non-absolute 'Location'
+	properly.
+
 2006-02-02  Jonathan Pryor  <jonpryor@vt.edu>
 
 	* www/images/heads/jonpryor.png: Use a transparent background.
